--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -37,11 +37,24 @@
   tags: [setup, dss-setup, dss-api]
 
 - name: Install DSS
-  become: true
-  become_user: "{{ dss_service_user }}"
-  ansible.builtin.command: "{{ dss_install_dir_location }}/dataiku-dss-{{ dss_version }}/installer.sh -d {{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ datadir }} -p {{ port }} -t {{ type }}"
-  args:
-    creates: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ datadir }}/dss-version.json"
+  block:
+    - name: Run the Dataiku DSS installer to install DSS for the first time
+      become: true
+      become_user: "{{ dss_service_user }}"
+      ansible.builtin.command: "{{ dss_install_dir_location }}/dataiku-dss-{{ dss_version }}/installer.sh -d {{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ datadir }} -p {{ port }} -t {{ type }}"
+      args:
+        creates: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ datadir }}/dss-version.json"
+      register: dss_install
+
+    - name: Notify spark install/update handler
+      assert: { that: true, quiet: true }
+      changed_when: dss_install.changed and configure_spark|bool
+      notify:
+        - Download Hadoop package
+        - Install or upgrade standalone Hadoop support
+        - Download Spark package
+        - Install or upgrade standalone Spark support
+  
   tags: [dss]
 
 - name: Read dss-version.json file
@@ -72,8 +85,20 @@
       become: true
       become_user: "{{ dss_service_user }}"
       ansible.builtin.command: "{{ dss_install_dir_location }}/dataiku-dss-{{ dss_version }}/installer.sh -u -y -d {{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ datadir }}"
+
+    - name: Notify spark install/update handler
+      assert: { that: true, quiet: true }
+      changed_when: configure_spark|bool
+      notify:
+        - Download Hadoop package
+        - Install or upgrade standalone Hadoop support
+        - Download Spark package
+        - Install or upgrade standalone Spark support
   when: current_dss_version is version(dss_version,  operator='lt', strict=True)
   tags: [dss]
+
+- name: Flush handlers
+  meta: flush_handlers
 
 - name: Copy license file
   become: true
@@ -89,44 +114,6 @@
   ansible.builtin.command: "{{ dss_install_dir_location }}/dataiku-dss-{{ dss_version }}/scripts/install/install-boot.sh -n {{ datadir }} {{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ datadir }} dataiku"
   args:
     creates: "/etc/init.d/dataiku.{{ datadir }}"
-  tags: [dss]
-
-- name: Download Hadoop package
-  when: configure_spark|bool
-  become: true
-  become_user: "{{ dss_service_user }}"
-  ansible.builtin.get_url:
-    url: "{{ dss_base_repository_url }}/{{ dss_version }}/{{ dss_hadoop_package }}"
-    dest: "{{ dss_install_dir_location }}/{{ dss_hadoop_package }}"
-    mode: '644'
-  tags: [setup, dss-setup]
-
-- name: Install or upgrade standalone Hadoop support
-  when: configure_spark|bool
-  become: true
-  become_user: "{{ dss_service_user }}"
-  ansible.builtin.command: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ datadir }}/bin/dssadmin install-hadoop-integration -standaloneArchive {{ dss_install_dir_location }}/{{ dss_hadoop_package }}"
-  args:
-    creates: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ datadir }}/bin/env-hadoop.sh"
-  tags: [dss]
-
-- name: Download Spark package
-  when: configure_spark|bool
-  become: true
-  become_user: "{{ dss_service_user }}"
-  ansible.builtin.get_url:
-    url: "{{ dss_base_repository_url }}/{{ dss_version }}/{{ dss_spark_package }}"
-    dest: "{{ dss_install_dir_location }}/{{ dss_spark_package }}"
-    mode: '644'
-  tags: [setup, dss-setup]
-
-- name: Install or upgrade standalone Spark support
-  when: configure_spark|bool
-  become: true
-  become_user: "{{ dss_service_user }}"
-  ansible.builtin.command: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ datadir }}/bin/dssadmin install-spark-integration -standaloneArchive {{ dss_install_dir_location }}/{{ dss_spark_package }}"
-  args:
-    creates: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ datadir }}/bin/env-spark.sh"
   tags: [dss]
 
 - name: Start the studios
