--- a/.github/workflows/molecule-ci.yml
+++ b/.github/workflows/molecule-ci.yml
@@ -25,4 +25,4 @@ jobs:
       - name: Test with molecule
         run: |
           ansible-galaxy install -r requirements.yml
-          molecule test --platform-name={{ matrix.platform }} --destroy=always
+          molecule test --platform-name=${{ matrix.platform }} --destroy=always
