--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -17,9 +17,9 @@ platforms:
     env:
       container: docker
   - name: molecule-centos8
-    image: docker.io/centos:8
+    image: quay.io/centos/centos:stream8
     pre_build_image: false
-    dockerfile: Dockerfile-centos8.j2
+    #dockerfile: Dockerfile-centos8.j2
     privileged: true
     volumes:
       - "/sys/fs/cgroup:/sys/fs/cgroup:rw"
