--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,11 @@
 ---
+# Check variables consistency before running tasks
+- name: Check packages version consistency
+  ansible.builtin.fail:
+    msg: Hadoop or Spark package version does not match DSS version {{ dss_version }}
+  when: (configure_spark|bool) and (dss_hadoop_package is not search(dss_version) or dss_spark_package is not search(dss_version))
 
+# Run role tasks
 - import_tasks: pre_install.yml
 - import_tasks: install.yml
 - import_tasks: config.yml
