--- a/.github/workflows/molecule-ci.yml
+++ b/.github/workflows/molecule-ci.yml
@@ -2,14 +2,35 @@
 name: Molecule Test
 on: [push, pull_request]
 jobs:
-  build:
+  lint:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
       - name: Install dependencies
         run: |
           python3 -m pip install --upgrade pip setuptools
-          python3 -m pip install --upgrade ansible==5.9.0 molecule molecule-docker
+          python3 -m pip install --upgrade ansible==5.9.0 yamllint ansible-lint
+      - name: Yamllint
+        run: |
+          yamllint tasks/*.yml
+      - name: Ansible Lint
+        run: |
+          ansible-lint
+  test:
+    runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        platform: [ 'molecule-debian10', 'molecule-centos7', 'molecule-centos8' ]
+      # When set to true, GitHub cancels all in-progress jobs if any matrix job fails.
+      fail-fast: true
+      # The maximum number of jobs that can run simultaneously
+      max-parallel: 1
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install dependencies
+        run: |
+          python3 -m pip install --upgrade pip setuptools
+          python3 -m pip install --upgrade ansible==5.9.0 molecule molecule-docker jmespath
       - name: Write license file without logging its content
         run: 'echo "$LICENSE" > license.json'
         shell: bash
@@ -18,4 +39,4 @@ jobs:
       - name: Test with molecule
         run: |
           ansible-galaxy install -r requirements.yml
-          molecule test
+          molecule test --platform-name=${{ matrix.platform }} --destroy=always
