--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -4,7 +4,7 @@
   become: true
   become_user: "{{ dss_service_user }}"
   dss_get_credentials:
-    datadir: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ datadir }}"
+    datadir: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ dss_datadir }}"
     api_key_name: ansible
   register: dss_connection_info
   tags: [dss-config]
