--- a/tasks/pre_install.yml
+++ b/tasks/pre_install.yml
@@ -62,7 +62,7 @@
 - name: Create dss data directory
   become: true
   ansible.builtin.file:
-    path: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ datadir }}"
+    path: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ dss_datadir }}"
     state: directory
     owner: "{{ dss_service_user }}"
     mode: "u=rwx,g=,o="
