--- a/.github/workflows/molecule-ci.yml
+++ b/.github/workflows/molecule-ci.yml
@@ -10,12 +10,9 @@ jobs:
         run: |
           python3 -m pip install --upgrade pip setuptools
           python3 -m pip install --upgrade ansible==5.9.0 yamllint ansible-lint
-      - name: Yamllint
-        run: |
-          yamllint tasks/*.yml
       - name: Ansible Lint
         run: |
-          ansible-lint
+          ansible-lint -x package-latest
   test:
     runs-on: ubuntu-20.04
     strategy:
