--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -57,6 +57,8 @@
         - Install or upgrade standalone Spark support
 
 - name: Read dss-version.json file
+  become: true
+  become_user: "{{ dss_service_user }}"
   ansible.builtin.command: cat {{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ dss_datadir }}/dss-version.json
   register: dss_version_jsonfile
   changed_when: false
