--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -28,5 +28,5 @@
 - name: Install or upgrade standalone Spark support
   become: true
   become_user: "{{ dss_service_user }}"
-  ansible.builtin.command: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ dss_datadir }}/bin/dssadmin install-spark-integration -standaloneArchive {{ dss_install_dir_location }}/{{ dss_spark_package }}"
+  ansible.builtin.command: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ dss_datadir }}/bin/dssadmin install-spark-integration -standaloneArchive {{ dss_install_dir_location }}/{{ dss_spark_package }}{{ ' -forK8S' if configure_k8s }}"
   tags: [dss]
