Changed configure_spark as a boolean value

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -19,7 +19,7 @@ dss_datadir: dss_data
 dss_network_port: 10000
 
 # Optional : add dss spark support
-configure_spark: "true"
+configure_spark: true
 dss_hadoop_package: "dataiku-dss-hadoop-standalone-libs-generic-hadoop3-10.0.7.tar.gz"
 dss_spark_package: "dataiku-dss-spark-standalone-10.0.7-3.1.2-generic-hadoop3.tar.gz"
 
