--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -10,6 +10,7 @@
         dss_hadoop_package: "dataiku-dss-hadoop-standalone-libs-generic-hadoop3-10.0.7.tar.gz"
         dss_spark_package: "dataiku-dss-spark-standalone-10.0.7-3.1.2-generic-hadoop3.tar.gz"
         configure_ldap_settings: "true"
+        configure_spark: true
         configure_k8s: true
         k8s_executionconfigs:
           - name: test1
@@ -45,6 +46,7 @@
         dss_hadoop_package: "dataiku-dss-hadoop-standalone-libs-generic-hadoop3-11.1.1.tar.gz"
         dss_spark_package: "dataiku-dss-spark-standalone-11.1.1-3.2.1-generic-hadoop3.tar.gz"
         configure_ldap_settings: "true"
+        configure_spark: true
         configure_k8s: true
         k8s_executionconfigs:
           - name: test1
