--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -11,6 +11,19 @@
         dss_spark_package: "dataiku-dss-spark-standalone-10.0.7-3.1.2-generic-hadoop3.tar.gz"
         configure_ldap_settings: "true"
         configure_spark: true
+        spark_executionconfigs:
+          - name": SparkOnKubernetes
+            kubernetesSettings:
+              managedKubernetes: true
+              managedNamespace: testnamespace
+              authenticationMode: BUILTIN
+              ensureNamespaceCompliance: false
+              createNamespace: false
+              baseImageType: SPARK
+              baseImage: dss_spark_base:latest
+              repositoryURL: docker.io
+              prePushMode: NONE
+              dockerTLSVerify: false
         configure_k8s: true
         k8s_executionconfigs:
           - name: test1
@@ -47,6 +60,19 @@
         dss_spark_package: "dataiku-dss-spark-standalone-11.1.1-3.2.1-generic-hadoop3.tar.gz"
         configure_ldap_settings: "true"
         configure_spark: true
+        spark_executionconfigs:
+          - name": SparkOnKubernetes
+            kubernetesSettings:
+              managedKubernetes: true
+              managedNamespace: testnamespace
+              authenticationMode: BUILTIN
+              ensureNamespaceCompliance: false
+              createNamespace: false
+              baseImageType: SPARK
+              baseImage: dss_spark_base:latest
+              repositoryURL: docker.io
+              prePushMode: NONE
+              dockerTLSVerify: false
         configure_k8s: true
         k8s_executionconfigs:
           - name: test1
