--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -10,6 +10,47 @@
         dss_hadoop_package: "dataiku-dss-hadoop-standalone-libs-generic-hadoop3-10.0.7.tar.gz"
         dss_spark_package: "dataiku-dss-spark-standalone-10.0.7-3.1.2-generic-hadoop3.tar.gz"
         configure_ldap_settings: "true"
+        configure_spark: true
+        spark_executionconfigs:
+          - name": SparkOnKubernetes
+            kubernetesSettings:
+              managedKubernetes: true
+              managedNamespace: testnamespace
+              authenticationMode: BUILTIN
+              ensureNamespaceCompliance: false
+              createNamespace: false
+              baseImageType: SPARK
+              baseImage: dss_spark_base:latest
+              repositoryURL: docker.io
+              prePushMode: NONE
+              dockerTLSVerify: false
+        configure_k8s: true
+        k8s_executionconfigs:
+          - name: test1
+            type: KUBERNETES
+            properties: []
+            usableBy: ALLOWED
+            allowedGroups:
+              - administrators
+            dockerNetwork: host
+            dockerResources: []
+            kubernetesNamespace: testnamespace
+            kubernetesResources:
+              memRequestMB: 2048
+              memLimitMB: 2048
+              cpuRequest: 2.0
+              cpuLimit: 2.0
+              customLimits: []
+              customRequests: []
+            hostPathVolumes: []
+            isFinal: false,
+            ensureNamespaceCompliance: false
+            createNamespace: false
+            baseImageType: EXEC
+            baseImage: dss_containerer_exec_base:latest
+            repositoryURL: docker.io
+            prePushMode: NONE
+            dockerTLSVerify: false
     - name: "Test DSS upgrade"
       ansible.builtin.include_role:
         name: "{{ lookup('env', 'MOLECULE_PROJECT_DIRECTORY') | basename }}"
@@ -18,3 +59,44 @@
         dss_hadoop_package: "dataiku-dss-hadoop-standalone-libs-generic-hadoop3-11.1.1.tar.gz"
         dss_spark_package: "dataiku-dss-spark-standalone-11.1.1-3.2.1-generic-hadoop3.tar.gz"
         configure_ldap_settings: "true"
+        configure_spark: true
+        spark_executionconfigs:
+          - name": SparkOnKubernetes
+            kubernetesSettings:
+              managedKubernetes: true
+              managedNamespace: testnamespace
+              authenticationMode: BUILTIN
+              ensureNamespaceCompliance: false
+              createNamespace: false
+              baseImageType: SPARK
+              baseImage: dss_spark_base:latest
+              repositoryURL: docker.io
+              prePushMode: NONE
+              dockerTLSVerify: false
+        configure_k8s: true
+        k8s_executionconfigs:
+          - name: test1
+            type: KUBERNETES
+            properties: []
+            usableBy: ALLOWED
+            allowedGroups:
+              - administrators
+            dockerNetwork: host
+            dockerResources: []
+            kubernetesNamespace: testnamespace
+            kubernetesResources:
+              memRequestMB: 2048
+              memLimitMB: 2048
+              cpuRequest: 2.0
+              cpuLimit: 2.0
+              customLimits: []
+              customRequests: []
+            hostPathVolumes: []
+            isFinal: false,
+            ensureNamespaceCompliance: false
+            createNamespace: false
+            baseImageType: EXEC
+            baseImage: dss_containerer_exec_base:latest
+            repositoryURL: docker.io
+            prePushMode: NONE
+            dockerTLSVerify: false
