Activate UIF and configure security-config.ini automatically

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -44,3 +44,7 @@ ldap_groupfilter: "(&(objectClass=posixGroup)(memberUid={USERDN}))"
 ldap_groupnameattribute: "cn"
 ldap_groupprofiles: []
 ldap_authorizedgroups: "dss-users"
+
+# Optional : activate User Isolation Framework (UIF)
+configure_uif: false
+uif_allowed_user_groups: []
