--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -49,4 +49,5 @@
   ansible.builtin.template: 
     src: "security-config.ini.j2"
     dest: "/etc/dataiku-security/{{ dss_install_id.stdout }}/security-config.ini"
+    mode: 0644
   tags: [dss]
