--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -58,7 +58,7 @@
 
     - name: Notify UIF install/update handler
       ansible.builtin.assert: { that: true, quiet: true }
-      changed_when: configure_uif
+      changed_when: dss_install.changed and configure_uif
       notify:
         - Activate UIF
         - Read dss install id
