--- a/tasks/pre_install.yml
+++ b/tasks/pre_install.yml
@@ -65,5 +65,5 @@
     path: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ dss_datadir }}"
     state: directory
     owner: "{{ dss_service_user }}"
-    mode: "u=rwx,g=,o="
+    mode: "u=rwx,g=x,o=x"
   tags: [setup, dss-setup]
