Replaced uif_allowed_user_groups with uif_users Automatic UIF users creation Corrected documentation

--- a/tasks/pre_install.yml
+++ b/tasks/pre_install.yml
@@ -41,6 +41,18 @@
     state: present
   tags: [setup, dss-setup]
 
+- name: Create UIF users
+  become: true
+  when: configure_uif
+  ansible.builtin.user:
+    name: "{{ item.key }}"
+    group: "{{ item.value.group }}"
+    home: "{{ dss_service_user_home_basedir }}/{{ item.key }}"
+    shell: "{{ dss_service_user_shell }}"
+    state: present
+  loop: "{{ uif_users | dict2items }}"
+  tags: [setup, dss-setup]
+
 - name: Allow admin group executing playbook to run any commands as DSS service user
   become: true
   community.general.sudoers:
