--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -47,4 +47,4 @@ ldap_authorizedgroups: "dss-users"
 
 # Optional : activate User Isolation Framework (UIF)
 configure_uif: false
-uif_allowed_user_groups: []
+uif_users: []
