--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -52,9 +52,11 @@
             prePushMode: NONE
             dockerTLSVerify: false
         configure_uif: true
-        uif_allowed_user_groups:
-          - group1
-          - group2
+        uif_users:
+          userA:
+            group: groupA
+          userB:
+            group: groupB
     - name: "Test DSS upgrade"
       ansible.builtin.include_role:
         name: "{{ lookup('env', 'MOLECULE_PROJECT_DIRECTORY') | basename }}"
@@ -105,6 +107,8 @@
             prePushMode: NONE
             dockerTLSVerify: false
         configure_uif: true
-        uif_allowed_user_groups:
-          - group1
-          - group2
+        uif_users:
+          userA:
+            group: groupA
+          userB:
+            group: groupB
