--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -48,5 +48,5 @@ ldap_authorizedgroups: "dss-users"
 # Optional : activate User Isolation Framework (UIF)
 configure_uif: false
 uif_users: []
-uif_userRules: []
-uif_groupRules: []
+uif_userrules: []
+uif_grouprules: []
