Added User Isolation Framework (UIF) support (#14)
- Activate UIF after a DSS install or update and configure security-config.ini automatically
- Corrected dss_data directory permissions to match UIF requirements
- Created UIF users and groups
- Added UIF mappings to DSS configuration
- Removed molecule converge.yml duplicate variables

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -44,3 +44,9 @@ ldap_groupfilter: "(&(objectClass=posixGroup)(memberUid={USERDN}))"
 ldap_groupnameattribute: "cn"
 ldap_groupprofiles: []
 ldap_authorizedgroups: "dss-users"
+
+# Optional : activate User Isolation Framework (UIF)
+configure_uif: false
+uif_users: []
+uif_userrules: []
+uif_grouprules: []
