Changed uif_users default value as {} to avoid dict2items error

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -47,6 +47,6 @@ ldap_authorizedgroups: "dss-users"
 
 # Optional : activate User Isolation Framework (UIF)
 configure_uif: false
-uif_users: []
+uif_users: {}
 uif_userrules: []
 uif_grouprules: []
