Added python-dateutil to avoid dependency issue chen running a playbook using the role in a venv

--- a/tasks/pre_install/debian.yml
+++ b/tasks/pre_install/debian.yml
@@ -41,6 +41,7 @@
       - python3-pip
       - python3-setuptools
       - python2-minimal
+      - python-dateutil
       - python-six
   when: ansible_facts['os_family'] == 'Debian' and ansible_facts ['distribution_major_version'] == '10'
 
