Added missing tag

--- a/tasks/pre_install.yml
+++ b/tasks/pre_install.yml
@@ -24,6 +24,7 @@
   become: true
   when: result.reboot_required
   ansible.builtin.reboot:
+  tags: [setup]
 
 - name: Increase system limits as required by DSS
   become: true
